# rusty-logs

./: .gitignore  Cargo.toml
src/: main.rs
